# sim

./: .gitignore  Review_record.md  async_check.ipynb  check_database.ipynb  classify_persona_by_task.py  classify_questions.py  demo_full_pipeline.ipynb  download_dataset.py  full_pipeline.ipynb  generate_profiles.ipynb  generate_skill_description.md  generate_skills.py  inspect_data.ipynb  main.ipynb  main.py  original_input_instruction.txt  pid_100_response.json  postprocess.py  process_llm_response.py  prompt.py  pyproject.toml  question_id_mapping.json  simulate_persona.py  test.ipynb  test.py
evaluation/: column_mapping.csv  json2csv.py  mad_accuracy_evaluation.py
text_simulation/: config.yaml  create_persona_facets.py  create_question_multi_shot.py  create_question_one_shot.py  format_question_text.py  postprocess_llm_response.py  question_id_mapping.json  simulate_persona_multi_shot.py  simulate_persona_one_shot.py
