[project]
name = "sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.13",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.10",
    "langchain-openrouter>=0.2.1",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "matplotlib>=3.10.8",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "vllm>=0.18.0",
]
